tests/cases/parser/literals/unclosed_string_literal.stderr
error: unclosed string literal
 --> $DIR/unclosed_string_literal.hash:3:2
2 |   
3 |   "a
  |    ^^^ here
